@@ -1,5 +1,9 @@
 2001-12-31  John Levon  <moz@compsoc.man.ac.uk>
 
+	* various files: use op_cpu enum for cpu type
+ 
+2001-12-31  John Levon  <moz@compsoc.man.ac.uk>
+
 	* all .cvsignore:
 	* Rules.make.in:
 	* all Makefile.in: hide .d files in .deps directories
